@@ -26,14 +26,15 @@ import com.sun.source.tree.TypeParameterTree;
 import com.sun.source.tree.VariableTree;
 import java.util.ArrayList;
 
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.EnumSet;
 import java.util.HashSet;
+import java.util.Iterator;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.Set;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.prefs.PreferenceChangeEvent;
 import java.util.prefs.PreferenceChangeListener;
@@ -50,13 +51,16 @@ import javax.lang.model.type.DeclaredType;
 import javax.lang.model.type.ExecutableType;
 import javax.lang.model.type.TypeKind;
 import javax.lang.model.type.TypeMirror;
+import javax.lang.model.type.TypeVariable;
 import javax.lang.model.util.ElementFilter;
 
 import org.netbeans.api.editor.mimelookup.MimeLookup;
 import org.netbeans.api.java.classpath.ClassPath;
 import org.netbeans.api.java.lexer.JavaTokenId;
 import org.netbeans.api.java.source.CompilationInfo;
+import org.netbeans.api.java.source.GeneratorUtilities;
 import org.netbeans.api.java.source.TreeMaker;
+import org.netbeans.api.java.source.TypeUtilities;
 import org.netbeans.api.java.source.WorkingCopy;
 import org.netbeans.api.project.SourceGroup;
 import org.netbeans.modules.j2ee.core.api.support.java.GenerationUtils;
@@ -71,7 +75,14 @@ public final class Utils {
     private static final String CONTROLLER_ANNOTATION_NAME = "io.micronaut.http.annotation.Controller"; //NOI18N
     private static final String GET_ANNOTATION_NAME = "io.micronaut.http.annotation.Get"; //NOI18N
     private static final String DELETE_ANNOTATION_NAME = "io.micronaut.http.annotation.Delete"; //NOI18N
+    private static final String PUT_ANNOTATION_NAME = "io.micronaut.http.annotation.Put"; //NOI18N
+    private static final String POST_ANNOTATION_NAME = "io.micronaut.http.annotation.Post"; //NOI18N
+    private static final String BODY_ANNOTATION_NAME = "io.micronaut.http.annotation.Body"; //NOI18N
+    private static final String VALID_ANNOTATION_NAME = "jakarta.validation.Valid"; //NOI18N
     private static final String CRUD_REPOSITORY_TYPE_NAME = "io.micronaut.data.repository.CrudRepository"; //NOI18N
+    private static final String PAGEABLE_REPOSITORY_TYPE_NAME = "io.micronaut.data.repository.PageableRepository"; //NOI18N
+    private static final String PAGEABLE_TYPE_NAME = "io.micronaut.data.model.Pageable"; //NOI18N
+    private static final String HTTP_RESPONSE_TYPE_NAME = "io.micronaut.http.HttpResponse"; //NOI18N
     private static final String COMPLETION_CASE_SENSITIVE = "completion-case-sensitive"; //NOI18N
     private static final boolean COMPLETION_CASE_SENSITIVE_DEFAULT = true;
     private static final String JAVA_COMPLETION_SUBWORDS = "javaCompletionSubwords"; //NOI18N
@@ -98,9 +109,9 @@ public final class Utils {
     private static Pattern cachedSubwordsPattern = null;
 
     public static List<VariableElement> collectMissingDataEndpoints(CompilationInfo info, TypeElement te, String prefix, DataEndpointConsumer consumer) {
-        AnnotationMirror controllerAnn = Utils.getAnnotation(te.getAnnotationMirrors(), CONTROLLER_ANNOTATION_NAME);
+        AnnotationMirror controllerAnn = getAnnotation(te.getAnnotationMirrors(), CONTROLLER_ANNOTATION_NAME);
         if (controllerAnn == null) {
-            return Collections.emptyList();
+            return List.of();
         }
         List<VariableElement> repositories = getRepositoriesFor(info, te);
         if (!repositories.isEmpty()) {
@@ -114,6 +125,8 @@ public final class Utils {
             for (VariableElement repository : repositories) {
                 TypeMirror repositoryType = repository.asType();
                 if (repositoryType.getKind() == TypeKind.DECLARED) {
+                    TypeMirror pageableRepositoryType = info.getTypes().erasure(info.getElements().getTypeElement(PAGEABLE_REPOSITORY_TYPE_NAME).asType());
+                    boolean isPageableRepository = info.getTypes().isSubtype(info.getTypes().erasure(repositoryType), pageableRepositoryType);
                     TypeElement repositoryTypeElement = (TypeElement) ((DeclaredType) repositoryType).asElement();
                     String id = null;
                     if (repositories.size() > 1) {
@@ -125,37 +138,35 @@ public final class Utils {
                             continue;
                         }
                     }
-                    List<ExecutableElement> repositoryMethods = ElementFilter.methodsIn(info.getElements().getAllMembers(repositoryTypeElement));
-                    String listMethodName = getEndpointMethodName("findAll", id); //NOI18N
-                    if (Utils.startsWith(listMethodName, prefix) && Utils.getAnnotatedMethod(methods, listMethodName, GET_ANNOTATION_NAME, id) == null) {
-                        ExecutableElement delegateMethod = null;
-                        for (ExecutableElement method : repositoryMethods.stream().filter(el -> "findAll".contentEquals(el.getSimpleName())).collect(Collectors.toList())) { //NOI18N
-                            List<? extends VariableElement> params = method.getParameters();
-                            if (delegateMethod == null && params.isEmpty()) {
-                                delegateMethod = method;
-                            } else if (params.size() == 1) {
-                                TypeMirror paramType = params.get(0).asType();
-                                if (paramType.getKind() == TypeKind.DECLARED && "io.micronaut.data.model.Pageable".contentEquals(((TypeElement) ((DeclaredType) paramType).asElement()).getQualifiedName())) { //NOI18N
-                                    delegateMethod = method;
-                                }
+                    List<ExecutableElement> repositoryMethods = ElementFilter.methodsIn(info.getElements().getAllMembers(repositoryTypeElement)).stream().filter(method -> {
+                        String methodName = method.getSimpleName().toString();
+                        if ("findAll".equals(methodName)) { //NOI18N
+                            if (isPageableRepository) {
+                                TypeMirror paramType = method.getParameters().size() == 1 ? method.getParameters().get(0).asType() : null;
+                                return paramType != null && paramType.getKind() == TypeKind.DECLARED && PAGEABLE_TYPE_NAME.contentEquals(((TypeElement) ((DeclaredType) paramType).asElement()).getQualifiedName());
                             }
+                            return method.getParameters().isEmpty();
                         }
-                        if (delegateMethod != null) {
-                            consumer.accept(repository, delegateMethod, id);
+                        if (methodName.endsWith("All")) { //NOI18N
+                            return false;
                         }
-                    }
-                    String getMethodName = getEndpointMethodName("findById", id); //NOI18N
-                    if (Utils.startsWith(getMethodName, prefix) && Utils.getAnnotatedMethod(methods, getMethodName, GET_ANNOTATION_NAME, id != null ? id + "/{id}" : "/{id}") == null) { //NOI18N
-                        Optional<ExecutableElement> method = repositoryMethods.stream().filter(el -> "findById".contentEquals(el.getSimpleName()) && el.getParameters().size() == 1).findAny(); //NOI18N
-                        if (method.isPresent()) {
-                            consumer.accept(repository, method.get(), id);
+                        if (methodName.startsWith("find")) { //NOI18N
+                            return true;
                         }
-                    }
-                    String deleteMethodName = getEndpointMethodName("deleteById", id); //NOI18N
-                    if (Utils.startsWith(deleteMethodName, prefix) && Utils.getAnnotatedMethod(methods, deleteMethodName, DELETE_ANNOTATION_NAME, id != null ? id + "/{id}" : "/{id}") == null) { //NOI18N
-                        Optional<ExecutableElement> method = repositoryMethods.stream().filter(el -> "deleteById".contentEquals(el.getSimpleName()) && el.getParameters().size() == 1).findAny(); //NOI18N
-                        if (method.isPresent()) {
-                            consumer.accept(repository, method.get(), id);
+                        if (methodName.startsWith("delete")) { //NOI18N
+                            return true;
+                        }
+                        if (methodName.startsWith("save")) { //NOI18N
+                            return true;
+                        }
+                        if (methodName.startsWith("update")) { //NOI18N
+                            return true;
+                        }
+                        return false;
+                    }).collect(Collectors.toList());
+                    for (ExecutableElement repositoryMethod : repositoryMethods) {
+                        if (getEndpointMethodFor(info, methods, (DeclaredType) repository.asType(), repositoryMethod, id) == null) {
+                            consumer.accept(repository, repositoryMethod, controllerId, id);
                         }
                     }
                 }
@@ -166,27 +177,6 @@ public final class Utils {
 
     public static AnnotationMirror getAnnotation(List<? extends AnnotationMirror> annotations, String annotationName) {
         return getAnnotation(annotations, annotationName, new HashSet<>());
-    }
-
-    public static ExecutableElement getAnnotatedMethod(List<ExecutableElement> methods, String methodName, String annotationName, String value) {
-        for (ExecutableElement method : methods) {
-            if (startsWith(method.getSimpleName().toString(), methodName)) {
-                AnnotationMirror annotation = getAnnotation(method.getAnnotationMirrors(), annotationName, new HashSet<>());
-                if (annotation != null) {
-                    Map<? extends ExecutableElement, ? extends AnnotationValue> elementValues = annotation.getElementValues();
-                    Object val = null;
-                    for (Map.Entry<? extends ExecutableElement, ? extends AnnotationValue> entry : elementValues.entrySet()) {
-                        if ("value".contentEquals(entry.getKey().getSimpleName())) { //NOI18N
-                            val = entry.getValue().getValue();
-                        }
-                    }
-                    if (Objects.equals(value, val)) {
-                        return method;
-                    }
-                }
-            }
-        }
-        return null;
     }
 
     public static List<VariableElement> getRepositoriesFor(CompilationInfo info, TypeElement te) {
@@ -200,46 +190,53 @@ public final class Utils {
         return repositories;
     }
 
-    public static MethodTree createControllerDataEndpointMethod(WorkingCopy copy, TypeElement repositoryTypeElement, String repositoryFieldName, String delegateMethodName, String idProefix) {
+    public static MethodTree createControllerFindAllDataEndpointMethod(WorkingCopy copy, TypeElement repositoryTypeElement, String repositoryFieldName, String controllerId, String idProefix) {
         TypeMirror repositoryType = repositoryTypeElement.asType();
         if (repositoryType.getKind() == TypeKind.DECLARED) {
-            List<ExecutableElement> repositoryMethods = ElementFilter.methodsIn(copy.getElements().getAllMembers(repositoryTypeElement));
-            ExecutableElement delegateMethod = null;
-            if ("findAll".equals(delegateMethodName)) { //NOI18N
-                for (ExecutableElement method : repositoryMethods.stream().filter(el -> delegateMethodName.contentEquals(el.getSimpleName())).collect(Collectors.toList())) {
-                    List<? extends VariableElement> params = method.getParameters();
-                    if (delegateMethod == null && params.isEmpty()) {
-                        delegateMethod = method;
-                    } else if (params.size() == 1) {
-                        TypeMirror paramType = params.get(0).asType();
-                        if (paramType.getKind() == TypeKind.DECLARED && "io.micronaut.data.model.Pageable".contentEquals(((TypeElement) ((DeclaredType) paramType).asElement()).getQualifiedName())) { //NOI18N
-                            delegateMethod = method;
-                        }
-                    }
+            TypeMirror pageableRepositoryType = copy.getTypes().erasure(copy.getElements().getTypeElement(PAGEABLE_REPOSITORY_TYPE_NAME).asType());
+            boolean isPageableRepository = copy.getTypes().isSubtype(copy.getTypes().erasure(repositoryType), pageableRepositoryType);
+            ExecutableElement delegateMethod = ElementFilter.methodsIn(copy.getElements().getAllMembers(repositoryTypeElement)).stream().filter(method -> {
+                if (!"findAll".contentEquals(method.getSimpleName())) { //NOI18N
+                    return false;
                 }
-            } else {
-                delegateMethod = repositoryMethods.stream().filter(method -> delegateMethodName.contentEquals(method.getSimpleName()) && method.getParameters().size() == 1).findAny().orElse(null);
-            }
+                if (isPageableRepository) {
+                    TypeMirror paramType = method.getParameters().size() == 1 ? method.getParameters().get(0).asType() : null;
+                    return paramType != null && paramType.getKind() == TypeKind.DECLARED && PAGEABLE_TYPE_NAME.contentEquals(((TypeElement) ((DeclaredType) paramType).asElement()).getQualifiedName());
+                }
+                return method.getParameters().isEmpty();
+            }).findFirst().orElse(null);
             if (delegateMethod != null) {
-                return createControllerDataEndpointMethod(copy, (DeclaredType) repositoryType, repositoryFieldName, delegateMethod, idProefix);
+                return createControllerDataEndpointMethod(copy, (DeclaredType) repositoryType, repositoryFieldName, delegateMethod, controllerId, idProefix);
             }
         }
         return null;
     }
 
-    public static MethodTree createControllerDataEndpointMethod(WorkingCopy copy, DeclaredType repositoryType, String repositoryFieldName, ExecutableElement delegateMethod, String idPrefix) {
-        switch (delegateMethod.getSimpleName().toString()) {
-            case "findAll": //NOI18N
-                return createControllerListMethod(copy, repositoryType, repositoryFieldName, delegateMethod, idPrefix);
-            case "findById": //NOI18N
-                return createControllerGetMethod(copy, repositoryType, repositoryFieldName, delegateMethod, idPrefix);
-            case "deleteById": //NOI18N
-                return createControllerDeleteMethod(copy, repositoryType, repositoryFieldName, delegateMethod, idPrefix);
+    public static MethodTree createControllerDataEndpointMethod(WorkingCopy copy, DeclaredType repositoryType, String repositoryFieldName, ExecutableElement delegateMethod, String controllerId, String idPrefix) {
+        TreeMaker tm = copy.getTreeMaker();
+        GenerationUtils gu = GenerationUtils.newInstance(copy);
+        ExecutableType delegateMethodType = (ExecutableType) copy.getTypes().asMemberOf(repositoryType, delegateMethod);
+        String delegateMethodName = delegateMethod.getSimpleName().toString();
+        List<AnnotationTree> annotations = new ArrayList<>();
+        String annotationTypeName = getControllerDataEndpointAnnotationTypeName(delegateMethodName);
+        String value = getControllerDataEndpointAnnotationValue(delegateMethod, delegateMethodType, idPrefix);
+        annotations.add(value != null ? gu.createAnnotation(annotationTypeName, List.of(tm.Literal(value))) : gu.createAnnotation(annotationTypeName));
+        if (DELETE_ANNOTATION_NAME.equals(annotationTypeName)) {
+            annotations.add(gu.createAnnotation("io.micronaut.http.annotation.Status", List.of(tm.MemberSelect(tm.QualIdent("io.micronaut.http.HttpStatus"), "NO_CONTENT")))); //NOI18N
+        };
+        ModifiersTree mods = tm.Modifiers(Set.of(Modifier.PUBLIC), annotations);
+        String methodName = getControllerDataEndpointMethodName(delegateMethodName, idPrefix);
+        TypeMirror returnType = getControllerDataEndpointReturnType(copy, delegateMethodName, delegateMethodType);
+        List<TypeParameterTree> typeParams = new ArrayList<>();
+        for (TypeVariable tv : delegateMethodType.getTypeVariables()) {
+            typeParams.add(tm.TypeParameter(tv.asElement().getSimpleName(), List.of((ExpressionTree) tm.Type(tv.getUpperBound()))));
         }
-        return null;
+        List<? extends VariableTree> params = getControllerDataEndpointParams(copy, delegateMethod, delegateMethodType);
+        String body = getControllerDataEndpointBody(copy, repositoryFieldName, delegateMethod, delegateMethodType, controllerId, idPrefix);
+        return tm.Method(mods, methodName, tm.Type(returnType), typeParams, params, List.of(), body, null);
     }
 
-    public static String getEndpointMethodName(String delegateMethodName, String postfix) {
+    public static String getControllerDataEndpointMethodName(String delegateMethodName, String postfix) {
         String name;
         switch (delegateMethodName) {
             case "findAll": //NOI18N
@@ -265,6 +262,54 @@ public final class Utils {
         return name;
     }
 
+    public static TypeMirror getControllerDataEndpointReturnType(CompilationInfo info, String delegateMethodName, ExecutableType type) {
+        TypeMirror returnType = type.getReturnType();
+        if (delegateMethodName.startsWith("update")) { //NOI18N
+            returnType = info.getTypes().getDeclaredType(info.getElements().getTypeElement(HTTP_RESPONSE_TYPE_NAME));
+        } else if (delegateMethodName.startsWith("save")) { //NOI18N
+            returnType = info.getTypes().getDeclaredType(info.getElements().getTypeElement(HTTP_RESPONSE_TYPE_NAME), returnType);
+        } else if ("findAll".equals(delegateMethodName) && !type.getParameterTypes().isEmpty() && returnType.getKind() == TypeKind.DECLARED) { //NOI18N
+            TypeElement te = (TypeElement) ((DeclaredType) returnType).asElement();
+            Optional<ExecutableElement> getContentMethod = ElementFilter.methodsIn(info.getElements().getAllMembers(te)).stream().filter(m -> "getContent".contentEquals(m.getSimpleName()) && m.getParameters().isEmpty()).findAny(); //NOI18N
+            if (getContentMethod.isPresent()) {
+                returnType = ((ExecutableType) info.getTypes().asMemberOf((DeclaredType) returnType, getContentMethod.get())).getReturnType();
+            }
+        }
+        return returnType;
+    }
+
+    public static String getControllerDataEndpointAnnotationTypeName(String delegateMethodName) {
+        if (delegateMethodName.startsWith("find")) { //NOI18N
+            return GET_ANNOTATION_NAME;
+        }
+        if (delegateMethodName.startsWith("delete")) { //NOI18N
+            return DELETE_ANNOTATION_NAME;
+        }
+        if (delegateMethodName.startsWith("save")) { //NOI18N
+            return POST_ANNOTATION_NAME;
+        }
+        if (delegateMethodName.startsWith("update")) { //NOI18N
+            return PUT_ANNOTATION_NAME;
+        }
+        return null;
+    }
+
+    public static String getControllerDataEndpointAnnotationValue(ExecutableElement delegateMethod, ExecutableType delegateMethodType, String idPrefix) {
+        String delegateMethodName = delegateMethod.getSimpleName().toString();
+        if (delegateMethodName.endsWith("ById") && !delegateMethod.getParameters().isEmpty()) { //NOI18N
+            String id = delegateMethod.getParameters().get(0).getSimpleName().toString();
+            return idPrefix != null ? idPrefix + "/{" + id + "}" : "/{" + id + "}"; //NOI18N
+        }
+        if (delegateMethodName.startsWith("update")) { //NOI18N
+            VariableElement idElement = getIdElement(delegateMethod.getParameters());
+            if (idElement != null) {
+                String id = idElement.getSimpleName().toString();
+                return idPrefix != null ? idPrefix + "/{" + id + "}" : "/{" + id + "}"; //NOI18N
+            }
+        }
+        return idPrefix;
+    }
+
     public static boolean isJPASupported(SourceGroup sg) {
         return resolveClassName(sg, "io.micronaut.data.jpa.repository.JpaRepository"); //NOI18N
     }
@@ -278,6 +323,125 @@ public final class Utils {
                 ? startsWithCamelCase(theString, prefix)
                 : startsWithCamelCase(theString, prefix) || startsWithPlain(theString, prefix)
                 : startsWithPlain(theString, prefix);
+    }
+
+    public static CharSequence getTypeName(CompilationInfo info, TypeMirror type, boolean fqn, boolean varArg) {
+        Set<TypeUtilities.TypeNameOptions> options = EnumSet.noneOf(TypeUtilities.TypeNameOptions.class);
+        if (fqn) {
+            options.add(TypeUtilities.TypeNameOptions.PRINT_FQN);
+        }
+        if (varArg) {
+            options.add(TypeUtilities.TypeNameOptions.PRINT_AS_VARARG);
+        }
+        return info.getTypeUtilities().getTypeName(type, options.toArray(new TypeUtilities.TypeNameOptions[0]));
+    }
+
+    private static ExecutableElement getEndpointMethodFor(CompilationInfo info, List<ExecutableElement> methods, DeclaredType repositoryType, ExecutableElement delegateMethod, String id) {
+        String delegateMethodName = delegateMethod.getSimpleName().toString();
+        String annotationName = getControllerDataEndpointAnnotationTypeName(delegateMethodName);
+        if (annotationName != null) {
+            String methodName = getControllerDataEndpointMethodName(delegateMethodName, id);
+            ExecutableType delegateMethodType = (ExecutableType) info.getTypes().asMemberOf(repositoryType, delegateMethod);
+            String value = getControllerDataEndpointAnnotationValue(delegateMethod, delegateMethodType, id);
+            for (ExecutableElement method : methods) {
+                if (methodName.contentEquals(method.getSimpleName())) {
+                    AnnotationMirror annotation = getAnnotation(method.getAnnotationMirrors(), annotationName, new HashSet<>());
+                    if (annotation != null) {
+                        Map<? extends ExecutableElement, ? extends AnnotationValue> elementValues = annotation.getElementValues();
+                        Object val = null;
+                        for (Map.Entry<? extends ExecutableElement, ? extends AnnotationValue> entry : elementValues.entrySet()) {
+                            if ("value".contentEquals(entry.getKey().getSimpleName())) { //NOI18N
+                                val = entry.getValue().getValue();
+                            }
+                        }
+                        if (Objects.equals(value, val)) {
+                            return method;
+                        }
+                    }
+                }
+            }
+        }
+        return null;
+    }
+
+    private static VariableElement getIdElement(List<? extends VariableElement> elements) {
+        for (VariableElement element : elements) {
+            for (AnnotationMirror annotation : element.getAnnotationMirrors()) {
+                TypeElement annotationElement = (TypeElement) annotation.getAnnotationType().asElement();
+                if ("io.micronaut.data.annotation.Id".contentEquals(annotationElement.getQualifiedName()) || "javax.persistence.Id".contentEquals(annotationElement.getQualifiedName())) { //NOI18N
+                    return element;
+                }
+            }
+        }
+        return null;
+    }
+
+    private static List<? extends VariableTree> getControllerDataEndpointParams(WorkingCopy copy, ExecutableElement delegateMethod, ExecutableType type) {
+        TreeMaker tm = copy.getTreeMaker();
+        GenerationUtils gu = GenerationUtils.newInstance(copy);
+        List<VariableTree> params = new ArrayList<>();
+        String delegateMethodName = delegateMethod.getSimpleName().toString();
+        VariableElement idElem = getIdElement(delegateMethod.getParameters());
+        if (idElem == null && delegateMethodName.endsWith("ById") && !delegateMethod.getParameters().isEmpty()) { //NOI18N
+            idElem = delegateMethod.getParameters().get(0);
+        }
+        Iterator<? extends VariableElement> it = delegateMethod.getParameters().iterator();
+        Iterator<? extends TypeMirror> tIt = type.getParameterTypes().iterator();
+        while (it.hasNext() && tIt.hasNext()) {
+            VariableElement param = it.next();
+            TypeMirror paramType = tIt.next();
+            List<AnnotationTree> annotations = new ArrayList<>();
+            if ("findAll".equals(delegateMethodName)) { //NOI18N
+                annotations.add(gu.createAnnotation(VALID_ANNOTATION_NAME));
+            } else if (idElem == null) {
+                annotations.add(gu.createAnnotation(BODY_ANNOTATION_NAME));
+                annotations.add(gu.createAnnotation(VALID_ANNOTATION_NAME));
+            } else if (idElem != param) {
+                annotations.add(gu.createAnnotation(BODY_ANNOTATION_NAME, List.of(tm.Literal(param.getSimpleName().toString()))));
+                for (AnnotationMirror am : param.getAnnotationMirrors()) {
+                    annotations.add(gu.createAnnotation(((TypeElement) am.getAnnotationType().asElement()).getQualifiedName().toString()));
+                }
+            }
+            params.add(tm.Variable(tm.Modifiers(0, annotations), param.getSimpleName(), tm.Type(paramType), null));
+        }
+        return params;
+    }
+
+    private static String getControllerDataEndpointBody(WorkingCopy copy, String repositoryFieldName, ExecutableElement delegateMethod, ExecutableType delegateMethodType, String controllerId, String idPrefix) {
+        String delegateMethodName = delegateMethod.getSimpleName().toString();
+        StringBuilder delegateMethodCall = new StringBuilder();
+        delegateMethodCall.append(repositoryFieldName).append('.').append(delegateMethodName).append('(');
+        for (Iterator<? extends VariableElement> it = delegateMethod.getParameters().iterator(); it.hasNext();) {
+            VariableElement param = it.next();
+            delegateMethodCall.append(param.getSimpleName());
+            if (it.hasNext()) {
+                delegateMethodCall.append(',');
+            }
+        }
+        delegateMethodCall.append(')');
+        if (delegateMethodName.equals("findAll") && !delegateMethod.getParameters().isEmpty()) { //NOI18N
+            return "{return " + delegateMethodCall.toString() + ".getContent();}"; //NOI18N
+        }
+        if (delegateMethodName.startsWith("find")) { //NOI18N
+            return "{return " + delegateMethodCall.toString() + ";}"; //NOI18N
+        }
+        if (delegateMethodName.startsWith("delete")) { //NOI18N
+            return "{" + delegateMethodCall.toString() + ";}"; //NOI18N
+        }
+        if (delegateMethodName.startsWith("save")) { //NOI18N
+            copy.rewrite(copy.getCompilationUnit(), GeneratorUtilities.get(copy).addImports(copy.getCompilationUnit(), Set.of(copy.getElements().getTypeElement("java.net.URI")))); //NOI18N
+            String idUri = getIdUri(delegateMethod, delegateMethodType, controllerId, idPrefix);
+            CharSequence typeName = getTypeName(copy, delegateMethodType.getReturnType(), false, false);
+            StringBuilder sb = new StringBuilder(typeName);
+            sb.setCharAt(0, Character.toLowerCase(sb.charAt(0)));
+            return "{" + typeName + " " + sb.toString() + " = " + delegateMethodCall.toString() + "return HttpResponse.created(" + sb.toString() + ").headers(headers -> headers.location(" + idUri + "));}"; //NOI18N
+        }
+        if (delegateMethodName.startsWith("update")) { //NOI18N
+            copy.rewrite(copy.getCompilationUnit(), GeneratorUtilities.get(copy).addImports(copy.getCompilationUnit(), Set.of(copy.getElements().getTypeElement("java.net.URI"), copy.getElements().getTypeElement("io.micronaut.http.HttpHeaders")))); //NOI18N
+            String idUri = getIdUri(delegateMethod, delegateMethodType, controllerId, idPrefix);
+            return "{" + delegateMethodCall.toString() + ";return HttpResponse.noContent().header(HttpHeaders.LOCATION, " + idUri+ ".getPath());}"; //NOI18N
+        }
+        return "{}"; //NOI18N
     }
 
     private static AnnotationMirror getAnnotation(List<? extends AnnotationMirror> annotations, String annotationName, HashSet<TypeElement> checked) {
@@ -296,48 +460,48 @@ public final class Utils {
         return null;
     }
 
-    private static MethodTree createControllerGetMethod(WorkingCopy copy, DeclaredType repositoryType, String repositoryFieldName, ExecutableElement delegateMethod, String idPrefix) {
-        TreeMaker tm = copy.getTreeMaker();
-        GenerationUtils gu = GenerationUtils.newInstance(copy);
-        ModifiersTree mods = tm.Modifiers(Collections.singleton(Modifier.PUBLIC), Collections.singletonList(gu.createAnnotation("io.micronaut.http.annotation.Get", Collections.singletonList(tm.Literal(idPrefix != null ? idPrefix + "/{id}" : "/{id}"))))); //NOI18N
-        ExecutableType type = (ExecutableType) copy.getTypes().asMemberOf(repositoryType, delegateMethod);
-        VariableTree param = tm.Variable(tm.Modifiers(Collections.emptySet()), "id", tm.Type(type.getParameterTypes().get(0)), null); //NOI18N
-        return tm.Method(mods, getEndpointMethodName(delegateMethod.getSimpleName().toString(), idPrefix), tm.Type(type.getReturnType()), Collections.<TypeParameterTree>emptyList(), Collections.singletonList(param), Collections.<ExpressionTree>emptyList(), "{return " + repositoryFieldName + "." + delegateMethod.getSimpleName() + "(id);}", null); //NOI18N
-    }
-
-    private static MethodTree createControllerDeleteMethod(WorkingCopy copy, DeclaredType repositoryType, String repositoryFieldName, ExecutableElement delegateMethod, String idPrefix) {
-        TreeMaker tm = copy.getTreeMaker();
-        GenerationUtils gu = GenerationUtils.newInstance(copy);
-        ModifiersTree mods = tm.Modifiers(Collections.singleton(Modifier.PUBLIC), Arrays.asList(new AnnotationTree[] {
-            gu.createAnnotation("io.micronaut.http.annotation.Delete", Collections.singletonList(tm.Literal(idPrefix != null ? idPrefix + "/{id}" : "/{id}"))), //NOI18N
-            gu.createAnnotation("io.micronaut.http.annotation.Status", Collections.singletonList(tm.MemberSelect(tm.QualIdent("io.micronaut.http.HttpStatus"), "NO_CONTENT"))) //NOI18N
-        }));
-        ExecutableType type = (ExecutableType) copy.getTypes().asMemberOf(repositoryType, delegateMethod);
-        VariableTree param = tm.Variable(tm.Modifiers(Collections.emptySet()), "id", tm.Type(type.getParameterTypes().get(0)), null); //NOI18N
-        return tm.Method(mods, getEndpointMethodName(delegateMethod.getSimpleName().toString(), idPrefix), tm.Type(type.getReturnType()), Collections.<TypeParameterTree>emptyList(), Collections.singletonList(param), Collections.<ExpressionTree>emptyList(), "{" + repositoryFieldName + "." + delegateMethod.getSimpleName() + "(id);}", null); //NOI18N
-    }
-
-    private static MethodTree createControllerListMethod(WorkingCopy copy, DeclaredType repositoryType, String repositoryFieldName, ExecutableElement delegateMethod, String idPrefix) {
-        TreeMaker tm = copy.getTreeMaker();
-        GenerationUtils gu = GenerationUtils.newInstance(copy);
-        ModifiersTree mods = tm.Modifiers(Collections.singleton(Modifier.PUBLIC), Collections.singletonList(gu.createAnnotation("io.micronaut.http.annotation.Get", idPrefix != null ? Collections.singletonList(tm.Literal(idPrefix)) : Collections.emptyList()))); //NOI18N
-        if (delegateMethod.getParameters().isEmpty()) {
-            TypeMirror returnType = ((ExecutableType) copy.getTypes().asMemberOf(repositoryType, delegateMethod)).getReturnType();
-            return tm.Method(mods, getEndpointMethodName(delegateMethod.getSimpleName().toString(), idPrefix), tm.Type(returnType), Collections.<TypeParameterTree>emptyList(), Collections.<VariableTree>emptyList(), Collections.<ExpressionTree>emptyList(), "{return " + repositoryFieldName + "." + delegateMethod.getSimpleName() + "();}", null); //NOI18N
+    private static String getIdUri(ExecutableElement delegateMethod, ExecutableType delegateMethodType, String controllerId, String idPrefix) {
+        StringBuilder idGet = new StringBuilder();
+        VariableElement idElem = getIdElement(delegateMethod.getParameters());
+        if (idElem != null) {
+            idGet.append(idElem.getSimpleName());
         } else {
-            ExecutableType type = (ExecutableType) copy.getTypes().asMemberOf(repositoryType, delegateMethod);
-            VariableTree param = tm.Variable(tm.Modifiers(0, Collections.singletonList(gu.createAnnotation("jakarta.validation.Valid"))), "pageable", tm.Type(type.getParameterTypes().get(0)), null); //NOI18N
-            TypeMirror returnType = type.getReturnType();
-            if (returnType.getKind() == TypeKind.DECLARED) {
-                TypeElement te = (TypeElement) ((DeclaredType) returnType).asElement();
-                Optional<ExecutableElement> getContentMethod = ElementFilter.methodsIn(copy.getElements().getAllMembers(te)).stream().filter(m -> "getContent".contentEquals(m.getSimpleName()) && m.getParameters().isEmpty()).findAny();
-                if (getContentMethod.isPresent()) {
-                    returnType = ((ExecutableType) copy.getTypes().asMemberOf((DeclaredType) returnType, getContentMethod.get())).getReturnType();
-                    return tm.Method(mods, getEndpointMethodName(delegateMethod.getSimpleName().toString(), idPrefix), tm.Type(returnType), Collections.<TypeParameterTree>emptyList(), Collections.singletonList(param), Collections.<ExpressionTree>emptyList(), "{return " + repositoryFieldName + "." + delegateMethod.getSimpleName() + "(pageable).getContent();}", null); //NOI18N
+            Iterator<? extends VariableElement> it = delegateMethod.getParameters().iterator();
+            Iterator<? extends TypeMirror> tIt = delegateMethodType.getParameterTypes().iterator();
+            if (it.hasNext() && tIt.hasNext()) {
+                DeclaredType entityType = null;
+                TypeMirror tm = tIt.next();
+                if (tm.getKind() == TypeKind.TYPEVAR) {
+                    TypeMirror upperBound = ((TypeVariable) tm).getUpperBound();
+                    if (upperBound.getKind() == TypeKind.DECLARED) {
+                        entityType = (DeclaredType) upperBound;
+                    }
+                } else if (tm.getKind() == TypeKind.DECLARED) {
+                    entityType = (DeclaredType) tm;
+                }
+                if (entityType != null) {
+                    VariableElement idField = getIdElement(ElementFilter.fieldsIn(entityType.asElement().getEnclosedElements()));
+                    if (idField != null) {
+                        StringBuilder getter = new StringBuilder(idField.getSimpleName());
+                        getter.setCharAt(0, Character.toUpperCase(getter.charAt(0)));
+                        getter.insert(0, "get").append("()"); //NOI18N
+                        idGet.append(it.next().getSimpleName()).append('.').append(getter.toString());
+                    }
                 }
             }
         }
-        return null;
+        StringBuilder sb = new StringBuilder("URI.create(\""); //NOI18N
+        if (controllerId != null) {
+            sb.append(controllerId);
+        }
+        if (idPrefix != null) {
+            sb.append(idPrefix);
+        }
+        sb.append("/\""); //NOI18N
+        if (idGet.length() > 0) {
+            sb.append(" + ").append(idGet); //NOI18N
+        }
+        return sb.append(')').toString();
     }
 
     private static boolean isCamelCasePrefix(String prefix) {
@@ -464,6 +628,6 @@ public final class Utils {
 
     @FunctionalInterface
     public static interface DataEndpointConsumer {
-        public void accept(VariableElement repository, ExecutableElement delegateMethod, String id);
+        public void accept(VariableElement repository, ExecutableElement delegateMethod, String controllerId, String id);
     }
 }
